# mev

./: .gitignore  .mock_run_22956085103  .mock_run_22956195064.writer-mock_update_01.md  .mock_run_22956195064.writer-mock_update_02.md  .mock_run_22998123027.scribe.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  astm.toml  install.sh  jlo.toml  justfile  mise.toml  mock_run_22998531386.md  patch.diff  patch2.diff  patch2.sh  patch_backup_sys_failure.sh  patch_cargo.sh  patch_cargo2.sh  patch_cargo_bin.sh  patch_cargo_bin2.sh  patch_cargo_bin4.sh  patch_cargo_bin5.sh  patch_cargo_bin6.sh  patch_cargo_bin8.sh  patch_cargo_test.sh  patch_env_mock.sh  patch_env_mock2.sh  patch_env_mock3.sh  patch_gh_tests.sh  patch_lib.sh  patch_lib2.sh  patch_tests.sh  pyproject.toml
crates/mev-internal/: AGENTS.md  Cargo.toml  justfile
crates/mev-internal/src/: lib.rs  main.rs
crates/mev-internal/src/adapters/: gh.rs  git.rs  mod.rs  process.rs
crates/mev-internal/src/app/cli/: gh.rs  git.rs  mod.rs
crates/mev-internal/src/app/commands/: mod.rs
crates/mev-internal/src/assets/gh/: labels.json
crates/mev-internal/src/domain/: error.rs  label_catalog.rs  mod.rs  repo_resolution.rs  repo_target.rs  repository_ref.rs  submodule_path.rs
crates/mev-internal/src/gh/: branch_diff.rs  mod.rs  pr_comments.rs  pr_merge_ready.rs
crates/mev-internal/src/git/: delete_submodule.rs  mod.rs
crates/mev-internal/src/testing/: env_mock.rs  mod.rs
crates/mev-internal/tests/: gh_contracts.rs  integration.rs
crates/mev-internal/tests/harness/: mod.rs  test_context.rs
docs/: README.md  (+6 more)
(+728 files in other folders)
