[package]
name = "mev"
version = "0.4.0"
edition = "2024"
description = "macOS development environment provisioning CLI."
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
mev-internal = { path = "crates/mev-internal" }
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
thiserror = "1.0"
which = "7.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.4.0"
