[package]
name = "mev-internal"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "7.0"
tempfile = "3.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.2"
serde_json = "1.0"
tempfile = "3.10"
